--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.1.1
-mysql-connector-python==8.3.0
-openai==1.95.1
-python-dotenv==1.1.1
-Requests==2.32.4
+Flask
+mysql-connector-python
+openai
+python-dotenv
+requests
